--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    color: rgb(50,50,50);
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+}
 
-.main-container {
-    margin-top: 20px,
+h2 {
+    color: rgb(50,55,65);
+    margin: 25px 0 0;
+}
+
+h2 + hr {
+    background: rgba(245,245,255,.5);
+    margin-bottom: 50px;
 }
