[ Directivas ] » Todos los componentes relacionados con  directivas se han metido dentro de un directorio común y se han actualizado las rutas

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -16,5 +16,9 @@
       <i class="icon fa fa-fw fa-life-ring" aria-hidden="true"></i>
       <a [routerLink]="['ngclass']">ngClass</a>
     </li>
+    <li routerLinkActive="active">
+        <i class="icon fa fa-fw fa-life-ring" aria-hidden="true"></i>
+        <a [routerLink]="['ngswitch']">ngSwitch</a>
+      </li>
   </ul>
 </div>
