--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,10 +6,14 @@ body {
 
 h2 {
     color: rgb(50,55,65);
-    margin: 25px 0 0;
+    font-size: 25px;
+    font-weight: 200;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    margin: 50px 0 0;
 }
 
 h2 + hr {
-    background: rgba(245,245,255,.5);
+    background: rgba(245,245,255,.25);
     margin-bottom: 50px;
 }
