[ Inicio ] » Contenido actualizado

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -1,9 +1,10 @@
 <div class="animated fadeIn">
 
-  <h2>Página de inicio</h2>
+  <h2>Bienvenido</h2>
   <hr>
 
   <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, sunt aliquid quia cum eius officia iure hic aperiam, mollitia possimus temporibus omnis ex provident odio tempore et totam natus vero.
+    Esta web tiene como objetivo ilustrar el funcionamiento de Angular de forma sencilla, breve y directa.
   </p>
+
 </div>
