--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,8 @@ h2 + hr {
     background: rgba(245,245,255,.25);
     margin-bottom: 50px;
 }
+
+p {
+    font-weight: 300;
+    margin: 0 0 25px;
+}
