--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,13 @@ p {
     font-weight: 300;
     margin: 0 0 25px;
 }
+
+.tarea-pendiente {
+    display: block;
+    color: red;
+    background: rgba(255,0,0,.25);
+    border: 1px solid rgb(255,0,0);
+    border-radius: 2px;
+    padding: 5px 10px;
+    margin: 5px;
+}
