--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,42 @@ h2 {
 
 h2 + hr {
     background: rgba(245,245,255,.25);
-    margin-bottom: 50px;
+    margin: 15px 0 40px;
+}
+
+h3 {
+    color: rgb(50,55,65);
+    font-size: 18px;
+    font-weight: 300;
+    margin: 50px 0 0;
+}
+
+h3 + hr {
+    background: rgba(245,245,255,.25);
+    margin: 15px 0 40px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+        font-weight: 300;
+        margin: 0 0 10px;
+
+        &:before {
+            content: '';
+            display: inline-block;
+            border: 1px solid rgba(50,55,65,.5);
+            border-radius: 50%;
+            margin-right: 15px;
+            position: relative;
+            bottom: 3px;
+            width: 4px;
+            height: 4px;
+        }
+    }
 }
 
 p {
