[ Rutas hijas ] » Contenido actualizado

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -20,5 +20,9 @@
       <i class="icon fa fa-fw fa-key" aria-hidden="true"></i>
       <a [routerLink]="['directivapropia']">Directivas personalizadas</a>
     </li>
+    <li routerLinkActive="active">
+      <i class="icon fa fa-fw fa-link" aria-hidden="true"></i>
+      <a [routerLink]="['rutas']">Rutas</a>
+    </li>
   </ul>
 </div>
