[ Fragmentar fichero de rutas ] » Contenido actualizado

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -3,6 +3,10 @@
   <h2>Bienvenido</h2>
   <hr>
 
+  <span class="tarea-pendiente">Crear subítems dentro del navbar para las directivas</span>
+  <span class="tarea-pendiente">Unificar los componentes de directivas en uno solo y diferenciar el contenido de cada uno con subapartados</span>
+  <span class="tarea-pendiente">Al hacer clic en un subítem de las directivas dentro del sidebar, que te mueva el scroll al apartado correspondiente</span>
+
   <p>
     Esta web tiene como objetivo ilustrar el funcionamiento de Angular de forma sencilla, breve y directa.
   </p>
