--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,7 @@ h3 + hr {
     margin: 15px 0 40px;
 }
 
-ul {
+#notas ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -63,7 +63,7 @@ p {
 
 img {
     display: block;
-    margin: 25px 0 25px 50px;
+    margin: 50px 0 50px 50px;
 }
 
 .tarea-pendiente {
