[ Ciclos de vida ] » Contenido actualizado

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -11,4 +11,9 @@
     Esta web tiene como objetivo ilustrar el funcionamiento de Angular de forma sencilla, breve y directa.
   </p>
 
+  <p>Creo que no es posible utilizar [routerLink] para una URL externa a la app (probar a ver si es vdd...)</p>
+
+  <p>Un archivo .map es un fichero intermedio que establece un mapping entre un lenguaje de progamación y otro. Lo encontramos, por ejemplo, con SASS, dado que no se compila directamente de SASS a CSS, sino que primero se utiliza una compilación o traducción intermediaria utilizando un fichero .map</p>
+  <p>Pues lo mismo pasa con TS y JS cuando vamos a publicar nuestra app de Angular. Esta se pasa de TS a JS, pero no de forma inmediata, sino usando ficheros .map también</p>
+
 </div>
