--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -24,5 +24,9 @@
       <i class="icon fa fa-fw fa-link" aria-hidden="true"></i>
       <a [routerLink]="['rutas']">Rutas</a>
     </li>
+    <li routerLinkActive="active">
+      <i class="icon fa fa-fw fa-leaf" aria-hidden="true"></i>
+      <a [routerLink]="['ciclos-de-vida']">Ciclos de vida</a>
+    </li>
   </ul>
 </div>
