--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
   <div style="display: flex; align-items: flex-start; justify-content: space-between">
     <div><app-menu></app-menu></div>
-    <div style="background: white; padding: 0 50px; width: 100%; min-height: 100vh"><router-outlet></router-outlet></div>
+    <div style="background: white; padding: 75px; width: 100%; min-height: 100vh"><router-outlet></router-outlet></div>
   </div>
   
 </div>
