--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ h2 {
     font-weight: 200;
     text-transform: uppercase;
     letter-spacing: 10px;
-    margin: 50px 0 0;
+    margin: 0;
 }
 
 h2 + hr {
