[ Despliegue ] » En proceso

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -13,7 +13,7 @@
       <a [routerLink]="['ngclass']">ngClass</a>
     </li>
     <li routerLinkActive="active">
-      <i class="icon fa fa-fw fa-life-ring" aria-hidden="true"></i>
+      <i class="icon fa fa-fw fa-star-o" aria-hidden="true"></i>
       <a [routerLink]="['ngswitch']">ngSwitch</a>
     </li>
     <li routerLinkActive="active">
@@ -27,6 +27,10 @@
     <li routerLinkActive="active">
       <i class="icon fa fa-fw fa-leaf" aria-hidden="true"></i>
       <a [routerLink]="['ciclos-de-vida']">Ciclos de vida</a>
+    </li>
+    <li routerLinkActive="active">
+      <i class="icon fa fa-fw fa-rocket" aria-hidden="true"></i>
+      <a [routerLink]="['despliegue']">Despliegue</a>
     </li>
   </ul>
 </div>
