--- a/src/app/componentes/menu/menu.component.scss
+++ b/src/app/componentes/menu/menu.component.scss
@@ -2,9 +2,20 @@
     background: rgb(50,55,70);
     border-radius: 2px;
     padding-top: 150px;
+    position: relative;
     width: 350px;
     height: 100%;
     min-height: 100vh;
+
+    .logo {
+        margin: auto;
+        position: absolute;
+        top: 35px;
+        right: 0;
+        left: 0;
+        width: 75px;
+        height: auto;
+    }
 
     ul {
         list-style-type: none;
@@ -13,7 +24,6 @@
 
         li {
             border-top: 1px solid rgba(245,245,255,.05);
-            padding: 14px 40px;
 
             .icon {
                 color: rgb(170,175,185);
@@ -22,10 +32,11 @@
             }
 
             a {
+                display: block;
                 color: rgb(170,175,185);
-                font-weight: 200;
                 text-decoration: none;
                 white-space: nowrap;
+                padding: 14px 40px;
                 margin: 0;
                 transition: .5s ease-in-out;
             }
