[ Navbar ] » Estilos actualizados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 <div class="animated fadeIn">
 
   <div style="display: flex; align-items: flex-start; justify-content: space-between">
-    <div><app-menu></app-menu></div>
-    <div style="background: white; padding: 75px; width: 100%; min-height: 100vh"><router-outlet></router-outlet></div>
+    <div style="position: fixed; top: 0; left: 0; width: 350px"><app-menu></app-menu></div>
+    <div style="background: white; padding: 75px; margin-left: 350px; width: 100%; min-height: 100vh"><router-outlet></router-outlet></div>
   </div>
   
 </div>
